--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   "private": true,
   "dependencies": {
     "body-parser": "^1.19.0",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "express-validator": "^5.3.1"
   },
   "devDependencies": {
-    "nodemon": "^1.19.0"
+    "nodemon": "^1.19.0",
+    "standard": "^12.0.1"
   }
 }
