--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-validator": "^5.3.1"
   },
   "devDependencies": {
+    "eslint": "^5.16.0",
     "nodemon": "^1.19.0",
     "standard": "^12.0.1"
   }
