--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   "private": true,
   "dependencies": {
     "body-parser": "^1.19.0",
+    "dotenv": "^8.0.0",
     "express": "^4.16.4",
-    "express-validator": "^5.3.1"
+    "express-validator": "^5.3.1",
+    "mongodb": "^3.2.4"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
