Get one site, page and media block

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,11 +25,11 @@
             "never"
         ],
         "no-unused-vars": [
-            "error", 
-            { 
-                "argsIgnorePattern": 
-                "next" 
+            "error",
+            {
+                "argsIgnorePattern": "next"
             }
-        ]
+        ],
+        "space-before-function-paren": "error"
     }
 }
