--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
   },
   "devDependencies": {
     "eslint": "^5.16.0",
-    "nodemon": "^1.19.0",
-    "standard": "^12.0.1"
+    "nodemon": "^1.19.0"
   }
 }
