--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
     "express-validator": "^5.3.1",
-    "mongodb": "^3.2.4"
+    "mongodb": "^3.2.4",
+    "mongoose": "^5.5.10"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
