--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Signly Content Server in NodeJS",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "node app.js",
+    "start:dev": "nodemon app.js",
+    "enc-config": "multi-encrypt enc",
+    "dec-config": "multi-encrypt dec"
   },
   "repository": {
     "type": "git",
@@ -15,11 +18,13 @@
   "private": true,
   "dependencies": {
     "body-parser": "^1.19.0",
+    "convict": "^5.0.0",
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
     "express-validator": "^5.3.1",
     "mongodb": "^3.2.4",
-    "mongoose": "^5.5.10"
+    "mongoose": "^5.5.10",
+    "multi-encrypt": "^1.0.4"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
