--- a/.gitignore
+++ b/.gitignore
@@ -61,8 +61,8 @@ typings/
 .next
 
 # Secrets - Handled by multi-encrypt
-./config/dev-local.json
-./config/dev.json
-./config/prod.json
-./config/stag.json
-./config/test.json
+/config/dev-local.json
+/config/dev.json
+/config/prod.json
+/config/stag.json
+/config/test.json
