--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "convict": "^5.0.0",
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
+    "express-async-errors": "^3.1.1",
     "joi": "^14.3.1",
     "mongodb": "^3.2.4",
     "mongoose": "^5.5.10",
