--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "joi": "^14.3.1",
     "mongodb": "^3.2.4",
     "mongoose": "^5.5.10",
-    "multi-encrypt": "^1.0.4"
+    "multi-encrypt": "^1.0.4",
+    "winston": "^3.2.1",
+    "winston-mongodb": "^5.0.0"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
