--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
     "express": "^4.16.4",
     "express-async-errors": "^3.1.1",
     "joi": "^14.3.1",
+    "joi-objectid": "^2.0.0",
     "mongodb": "^3.2.4",
     "mongoose": "^5.5.10",
     "multi-encrypt": "^1.0.4",
-    "winston": "^3.2.1",
-    "winston-mongodb": "^5.0.0"
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
