--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "node app.js",
     "start:dev": "nodemon app.js",
     "enc-config": "multi-encrypt enc",
-    "dec-config": "multi-encrypt dec"
+    "dec-config": "multi-encrypt dec",
+    "test": "jest",
+    "test:watch": "jest --watchAll --verbose"
   },
   "repository": {
     "type": "git",
@@ -31,6 +33,8 @@
   },
   "devDependencies": {
     "eslint": "^5.16.0",
-    "nodemon": "^1.19.0"
+    "jest": "^24.8.0",
+    "nodemon": "^1.19.0",
+    "supertest": "^4.0.2"
   }
 }
