--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   "private": true,
   "dependencies": {
     "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
     "express-async-errors": "^3.1.1",
+    "helmet": "^3.18.0",
     "joi": "^14.3.1",
     "joi-objectid": "^2.0.0",
     "mongodb": "^3.2.4",
