--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
   "private": true,
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cheerio": "^1.0.0-rc.3",
     "compression": "^1.7.4",
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
     "express-async-errors": "^3.1.1",
+    "headless-chrome-crawler": "^1.8.0",
     "helmet": "^3.18.0",
     "joi": "^14.3.1",
     "joi-objectid": "^2.0.0",
