External page object updated to include mediaBlocks

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,9 +11,11 @@ steps:
     versionSpec: '10.x'
   displayName: 'Install Node.js'
 
-- script: |
-    yarn install
-  displayName: 'yarn install'
+- script: curl -o- -L https://yarnpkg.com/install.sh | bash
+  displayName: 'Install Yarn'
+
+- script: yarn install
+  displayName: 'Install dependencies'
 
 #- script: |
 #    yarn test
