--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "mongodb": "^3.2.4",
     "mongoose": "^5.5.10",
     "multi-encrypt": "^1.0.4",
+    "nightmare": "^3.0.2",
     "winston": "^3.2.1"
   },
   "devDependencies": {
