Now using puppeteer to do web page scraping

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,6 +17,9 @@ steps:
 - script: yarn install
   displayName: 'Install dependencies'
 
+- script: yarn add puppeteer
+  displayName: 'Install puppeteer'
+
 #- script: |
 #    yarn test
 #  displayName: 'yarn test'
