Route added. Alias module added.

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "helmet": "^3.18.0",
     "joi": "^14.3.1",
     "joi-objectid": "^2.0.0",
+    "module-alias": "^2.2.1",
     "mongodb": "^3.2.4",
     "mongoose": "^5.5.10",
     "multi-encrypt": "^1.0.4",
@@ -40,5 +41,13 @@
     "jest": "^24.8.0",
     "nodemon": "^1.19.0",
     "supertest": "^4.0.2"
+  },
+  "_moduleAliases": {
+    "~": ".",
+    "~controllers": "controllers",
+    "~models": "models",
+    "~routes": "routes",
+    "~services": "services",
+    "~middleware": "middleware"
   }
 }
