--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "module-alias": "^2.2.1",
     "mongodb": "^3.2.4",
     "mongoose": "^5.5.10",
+    "multer": "^1.4.2",
     "multi-encrypt": "^1.0.4",
     "puppeteer": "^1.18.1",
     "winston": "^3.2.1"
