--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "body-parser": "^1.19.0",
     "cheerio": "^1.0.0-rc.3",
     "compression": "^1.7.4",
+    "del": "^5.1.0",
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
     "express-async-errors": "^3.1.1",
     "helmet": "^3.18.0",
     "joi": "^14.3.1",
     "joi-objectid": "^2.0.0",
+    "mkdirp": "^0.5.1",
     "module-alias": "^2.2.1",
     "mongodb": "^3.2.4",
     "mongoose": "^5.5.10",
@@ -49,6 +51,7 @@
     "~models": "models",
     "~routes": "routes",
     "~services": "services",
-    "~middleware": "middleware"
+    "~middleware": "middleware",
+    "~utils": "utils"
   }
 }
