--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
   "license": "ISC",
   "private": true,
   "dependencies": {
+    "@azure/arm-mediaservices": "^6.0.0",
+    "@azure/identity": "^1.0.0-preview.5",
+    "@azure/ms-rest-nodeauth": "^2.0.5",
+    "@azure/storage-blob": "^12.0.0-preview.3",
+    "await-to-js": "^2.1.1",
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "cheerio": "^1.0.0-rc.3",
