--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "await-to-js": "^2.1.1",
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
+    "bull": "^3.11.0",
     "cheerio": "^1.0.0-rc.3",
     "compression": "^1.7.4",
     "del": "^5.1.0",
