--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
   "private": true,
   "dependencies": {
     "@azure/arm-mediaservices": "^6.0.0",
-    "@azure/identity": "^1.0.0-preview.5",
+    "@azure/identity": "^1.0.2",
     "@azure/ms-rest-nodeauth": "^2.0.5",
-    "@azure/storage-blob": "^12.0.0-preview.3",
+    "@azure/storage-blob": "^12.0.1",
     "await-to-js": "^2.1.1",
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
