--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "mongoose": "^5.5.10",
     "multer": "^1.4.2",
     "multi-encrypt": "^1.0.4",
+    "safe-regex": "^2.1.1",
     "winston": "^3.2.1"
   },
   "devDependencies": {
