--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "signly-content-nodejs",
+  "name": "signly-rest-api",
   "version": "0.1.0",
-  "description": "Signly Content Server in NodeJS",
+  "description": "Signly RESTful Content Server in NodeJS",
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
@@ -14,7 +14,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@ssh.dev.azure.com:v3/signly/SignlyBrowserExtension/signly-content-nodejs"
+    "url": "git@ssh.dev.azure.com:v3/signly/SignlyBrowserExtension/signly-rest-api"
   },
   "author": "Alex Malhao",
   "license": "ISC",
@@ -36,6 +36,7 @@
     "helmet": "^3.18.0",
     "joi": "^14.3.1",
     "joi-objectid": "^2.0.0",
+    "json2xls": "^0.1.2",
     "mkdirp": "^0.5.1",
     "module-alias": "^2.2.1",
     "mongodb": "^3.2.4",
