--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "module-alias": "^2.2.1",
     "mongodb": "^3.2.4",
     "mongoose": "^5.5.10",
+    "mongoose-paginate-v2": "^1.3.9",
     "multer": "^1.4.2",
     "multi-encrypt": "^1.0.4",
     "safe-regex": "^2.1.1",
