--- a/.github/workflows/release-production_signly.yml
+++ b/.github/workflows/release-production_signly.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy Node.js app to Azure Web App - signly
+name: british-sign-language - signly-rest-api - CI/CD
 
 on:
   push:
@@ -19,19 +19,22 @@ jobs:
       - name: Set up Node.js version
         uses: actions/setup-node@v1
         with:
-          node-version: 'node|10.14'
+          node-version: '12.x'
 
       - name: npm install, build, and test
         run: |
           npm install
-          npm run build --if-present
-          npm run test --if-present
+#          npm run build --if-present
+#          npm run test --if-present
+
+      - name: 'Tar files'
+        run: tar -cf node-app.tar .
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
           name: node-app
-          path: .
+          path: node-app.tar
 
   deploy:
     runs-on: ubuntu-latest
@@ -45,7 +48,10 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: node-app
-
+          
+      - name: 'Untar files'
+        run: 'tar -xf node-app.tar'
+        
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
