--- a/.github/workflows/release-production_australian-sign-language.yml
+++ b/.github/workflows/release-production_australian-sign-language.yml
@@ -26,7 +26,7 @@ jobs:
           npm install
 #          npm run build --if-present
 #          npm run test --if-present
-      
+
       - name: 'Tar files'
         run: tar -cf node-app.tar .
 
@@ -48,9 +48,9 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: node-app
-          
+
       - name: 'Untar files'
-        run: 'tar -xvf node-app.tar'
+        run: 'tar -xf node-app.tar'
 
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
