--- a/.github/workflows/release-production_american-sign-language.yml
+++ b/.github/workflows/release-production_american-sign-language.yml
@@ -21,9 +21,9 @@ jobs:
         with:
           node-version: '14.x'
 
-      - name: npm install, build, and test
+      - name: yarn install, build, and test
         run: |
-          npm install
+          yarn install
 #          npm run build --if-present
 #          npm run test --if-present
 
