--- a/.github/workflows/release-production_american-sign-language.yml
+++ b/.github/workflows/release-production_american-sign-language.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy Node.js app to Azure Web App - american-sign-language
+name: new american-sign-language - signly-rest-api - CI/CD
 
 on:
   push:
@@ -21,17 +21,20 @@ jobs:
         with:
           node-version: '14.x'
 
-      - name: npm install, build, and test
+      - name: yarn install, build, and test
         run: |
-          npm install
-          npm run build --if-present
-          npm run test --if-present
+          yarn install
+#          npm run build --if-present
+#          npm run test --if-present
+
+      - name: 'Tar files'
+        run: tar -cf node-app.tar .
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
           name: node-app
-          path: .
+          path: node-app.tar
 
   deploy:
     runs-on: ubuntu-latest
@@ -45,6 +48,9 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: node-app
+
+      - name: 'Untar files'
+        run: 'tar -xf node-app.tar'
 
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
